# UnetLoopDetection

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_make_pairs_and_patches.ipynb  02_train_unet_classifier.ipynb  03_evaluate_and_plots.ipynb  04_anchor_occupancy_analysis.ipynb
scripts/: score_pairs.py  train_unet.py
src/unetloopdetection/: __init__.py  config.py  dataset.py  eval.py  io.py  metrics.py  model_unet.py  patches.py  train.py
